[package]
name = "stub"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
windows-sys = { version = "0.61.2", features = [
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
] }

[profile.release]
opt-level = "z" #size
lto = true
panic = "abort"

[target.x86_64-pc-windows-msvc]
rustflags = [
    "-C",
    "link-arg=/ENTRY:mainCRTStartup",
    "-C",
    "link-arg=/SUBSYSTEM:CONSOLE",
]
